--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %5p %
 
 ##设置日志记录到文件的方式
 log4j.appender.file=org.apache.log4j.FileAppender
-log4j.appender.file.File=mylog.log
+log4j.appender.file.File=log/log.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %5p %c{1}:%L - %m%n
 
@@ -26,7 +26,7 @@ log4j.rootLogger=debug, stdout
 ## 单独设置 hibernate sql 日志的级别（可看到绑定参数值）
 log4j.logger.org.hibernate.type=TRACE
 
-logging.level.com.chatroom.dao=debug
+#logging.level.com.chatroom.dao=debug
 
 #------------------------------------------------------------------------
 #    %m 输出代码中指定的消息
